--- a/glue_small_multiples/qt/options_widget.ui
+++ b/glue_small_multiples/qt/options_widget.ui
@@ -35,7 +35,7 @@
       <enum>QTabWidget::North</enum>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <property name="usesScrollButtons">
       <bool>false</bool>
@@ -211,10 +211,10 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1" colspan="2">
+       <item row="0" column="1">
         <widget class="QLineEdit" name="valuetext_x_min"/>
        </item>
-       <item row="0" column="3">
+       <item row="0" column="2">
         <widget class="QToolButton" name="button_flip_x">
          <property name="styleSheet">
           <string notr="true">padding: 0px</string>
@@ -224,11 +224,69 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="4">
+       <item row="0" column="3" colspan="2">
         <widget class="QLineEdit" name="valuetext_x_max"/>
        </item>
        <item row="0" column="5">
         <widget class="QToolButton" name="bool_x_log">
+         <property name="text">
+          <string>log</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0" colspan="4">
+        <widget class="QLabel" name="type_lab_3">
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>max number of columns</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="4">
+        <widget class="QSpinBox" name="value_max_num_cols"/>
+       </item>
+       <item row="5" column="0" colspan="4">
+        <widget class="QLabel" name="type_lab_4">
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>max number of rows</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="4">
+        <widget class="QSpinBox" name="value_max_num_rows"/>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLineEdit" name="valuetext_y_min"/>
+       </item>
+       <item row="1" column="2">
+        <widget class="QToolButton" name="button_flip_y">
+         <property name="styleSheet">
+          <string notr="true">padding: 0px</string>
+         </property>
+         <property name="text">
+          <string>⇄</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="4">
+        <widget class="QLineEdit" name="valuetext_y_max"/>
+       </item>
+       <item row="1" column="5">
+        <widget class="QToolButton" name="bool_y_log">
          <property name="text">
           <string>log</string>
          </property>
@@ -252,90 +310,6 @@
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
         </widget>
-       </item>
-       <item row="1" column="1" rowspan="2" colspan="2">
-        <widget class="QLineEdit" name="valuetext_y_min"/>
-       </item>
-       <item row="1" column="4" rowspan="2">
-        <widget class="QLineEdit" name="valuetext_y_max"/>
-       </item>
-       <item row="1" column="5" rowspan="2">
-        <widget class="QToolButton" name="bool_y_log">
-         <property name="text">
-          <string>log</string>
-         </property>
-         <property name="checkable">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="3">
-        <widget class="QToolButton" name="button_flip_y">
-         <property name="styleSheet">
-          <string notr="true">padding: 0px</string>
-         </property>
-         <property name="text">
-          <string>⇄</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0" colspan="2">
-        <widget class="QLabel" name="type_lab_3">
-         <property name="font">
-          <font>
-           <weight>75</weight>
-           <bold>true</bold>
-          </font>
-         </property>
-         <property name="text">
-          <string>max columns</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="0">
-        <widget class="QLabel" name="type_lab_4">
-         <property name="font">
-          <font>
-           <weight>75</weight>
-           <bold>true</bold>
-          </font>
-         </property>
-         <property name="text">
-          <string>max rows</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="1" colspan="2">
-        <spacer name="horizontalSpacer_2">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>5</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="6" column="2">
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="3" column="4">
-        <widget class="QLineEdit" name="valuetext_max_num_cols"/>
-       </item>
-       <item row="4" column="4">
-        <widget class="QLineEdit" name="valuetext_max_num_rows"/>
        </item>
       </layout>
      </widget>
