--- a/glue_small_multiples/qt/options_widget.ui
+++ b/glue_small_multiples/qt/options_widget.ui
@@ -251,7 +251,14 @@
         </widget>
        </item>
        <item row="4" column="4">
-        <widget class="QSpinBox" name="value_max_num_cols"/>
+        <widget class="QSpinBox" name="value_max_num_cols">
+         <property name="minimum">
+          <number>1</number>
+         </property>
+         <property name="maximum">
+          <number>20</number>
+         </property>
+        </widget>
        </item>
        <item row="5" column="0" colspan="4">
         <widget class="QLabel" name="type_lab_4">
@@ -267,7 +274,14 @@
         </widget>
        </item>
        <item row="5" column="4">
-        <widget class="QSpinBox" name="value_max_num_rows"/>
+        <widget class="QSpinBox" name="value_max_num_rows">
+         <property name="minimum">
+          <number>1</number>
+         </property>
+         <property name="maximum">
+          <number>20</number>
+         </property>
+        </widget>
        </item>
        <item row="1" column="1">
         <widget class="QLineEdit" name="valuetext_y_min"/>
